Fix issue 212.